@@ -12,6 +12,8 @@ Skyscraper.Frontend.DisplayFPS = false
 Skyscraper.Frontend.RenderOnly = false
 Skyscraper.Frontend.InputOnly = false
 ;Skyscraper.Frontend.AutoLoad = Simple.bld
+Skyscraper.Frontend.ShowControlPanel = true
+Skyscraper.Frontend.FullScreen = false
 
 ; SBS core configuration
 Skyscraper.SBS.HorizScale = 1.0
