@@ -34,6 +34,8 @@ in a shaft or an elevator
 -added support for cropping and overlaying textures with the LoadCropped and AddOverlay commands
 -added configuration file support
 -added support for zooming in and out (FOV angles)
+-added support for starting up without the control panel
+-added fullscreen support, activated by F10
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
